--- a/index.css
+++ b/index.css
@@ -22,23 +22,22 @@ h1 {
 }
 
 .content {
-  height: 100%;
-  display: flex;
+
 }
 
 #hubot-output {
   text-align: left;
+  flex-grow: 1;
   overflow: scroll;
   font-size: 1.5em;
   border: none;
   background-color: rgb(238, 252, 250);
   font-family: monospace;
-  white-space: pre;
   position:absolute;
   color: black;
   top:50px;
   left:5px;
-  width:100%;
+  right:5px;
   height:200px;
 }
 
@@ -49,7 +48,6 @@ h1 {
   border: none;
   background-color: rgb(238, 252, 250);
   font-family: monospace;
-  white-space: pre;
   position:absolute;
   color: black;
   bottom:5px;
