--- a/index.css
+++ b/index.css
@@ -30,6 +30,8 @@ h1 {
   border: none;
   text-align: left;
   margin: 5px;
+  margin-bottom: 0px;
+  margin-top: 0px;
   font-family: monospace;
 }
 
@@ -54,7 +56,7 @@ h1 {
   font-style: italic;
   opacity: 0.8;
   margin-left: 20px;
-  margin-top: 20px;
+  margin-top: 10px;
   color: rgb(56, 56, 56);
 }
 
@@ -71,4 +73,12 @@ h1 {
 
 #send-button {
   font-size: 0.5em;
+}
+
+#footer {
+  color: rgb(56, 56, 56);
+  font-size: 12px;
+  text-align: right;
+  margin-right: 25px;
+  margin-bottom: 5px;
 }
