--- a/index.css
+++ b/index.css
@@ -1,7 +1,38 @@
 body {
   font-family:BlinkMacSystemFont, "Lucida Grande", "Segoe UI", Ubuntu;
-  color: #fff;
   text-align: center;
+}
+
+#left-section {
+  /*background-color: red;*/
+  width:400px;
+  position: absolute;
+  left: 0;
+  height: 570px;
+  top: 0px;
+}
+
+#right-section {
+  /*background-color: blue;*/
+  border-left: solid rgb(245, 245, 245) 10px;
+  width:400px;
+  position: absolute;
+  right: 0;
+  height: 570px;
+  top: 0px;
+}
+
+#footer {
+  background-color: rgb(245, 245, 245);
+  color: rgb(56, 56, 56);
+  font-size: 12px;
+  text-align: right;
+  margin-right: 10px;
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  height: 30px;
+  left: 0px;
 }
 
 h1 {
@@ -15,13 +46,40 @@ h1 {
   line-height: 30px;
 }
 
+#hubot-output {
+  /*background-color: green;*/
+  width: 94%;
+  padding-right: 15px;
+  text-align: left;
+  flex-grow: 1;
+  overflow: scroll;
+  font-size: 1.5em;
+  border: none;
+  font-family: monospace;
+  position:absolute;
+  color: black;
+  top:50px;
+  left:5px;
+  right:5px;
+  height:435px;
+}
+
 #bottom-section {
   position: absolute;
   bottom: 0px;
   left: 0px;
   background-color: rgb(245, 245, 245);
   width: 100%;
-  height: 120px;
+  height: 80px;
+}
+
+#hint {
+  text-align: left;
+  font-style: italic;
+  opacity: 0.8;
+  margin-left: 45px;
+  margin-top: 10px;
+  color: rgb(56, 56, 56);
 }
 
 #input-area {
@@ -33,32 +91,6 @@ h1 {
   margin-top: 10px;
   margin-bottom: 10px;
   font-family: monospace;
-}
-
-#hubot-output {
-  width: 100%;
-  text-align: left;
-  flex-grow: 1;
-  overflow: scroll;
-  font-size: 1.5em;
-  border: none;
-  font-family: monospace;
-  /*white-space: pre-wrap;*/
-  position:absolute;
-  color: black;
-  top:50px;
-  left:5px;
-  right:5px;
-  height:70%;
-}
-
-#hint {
-  text-align: left;
-  font-style: italic;
-  opacity: 0.8;
-  margin-left: 45px;
-  margin-top: 10px;
-  color: rgb(56, 56, 56);
 }
 
 #load-new-button {
@@ -84,14 +116,6 @@ h1 {
   margin-top: 10px;
   margin-left: 5px;
   font-size: 0.6em;
-}
-
-#footer {
-  color: rgb(56, 56, 56);
-  font-size: 12px;
-  text-align: right;
-  margin-right: 10px;
-  margin-bottom: 5px;
 }
 
 .output-row {
@@ -121,3 +145,9 @@ h1 {
   display: table-cell;
   width: 70px;
 }
+
+/*
+
+
+
+*/
