--- a/index.css
+++ b/index.css
@@ -14,12 +14,23 @@ body {
 
 #right-section {
   /*background-color: blue;*/
-  border-left: solid rgb(245, 245, 245) 10px;
+  /*border-left: solid rgb(245, 245, 245) 10px;*/
   width:400px;
   position: absolute;
   right: 0;
   height: 570px;
   top: 0px;
+}
+
+#script-textarea {
+  width: 100%;
+  height: 498px;
+  top: 50px;
+  position: absolute;
+  left: 0;
+  font-size: 17px;
+  border: lightgray;
+  border-style: solid;
 }
 
 #footer {
@@ -61,7 +72,7 @@ h1 {
   top:50px;
   left:5px;
   right:5px;
-  height:435px;
+  height:415px;
 }
 
 #bottom-section {
@@ -70,7 +81,7 @@ h1 {
   left: 0px;
   background-color: rgb(245, 245, 245);
   width: 100%;
-  height: 80px;
+  height: 100px;
 }
 
 #hint {
@@ -145,9 +156,3 @@ h1 {
   display: table-cell;
   width: 70px;
 }
-
-/*
-
-
-
-*/
