--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ body {
 
 #right-section {
   /*background-color: blue;*/
-  /*border-left: solid rgb(245, 245, 245) 10px;*/
+  border-left: solid lightgray 3px;
   width:400px;
   position: absolute;
   right: 0;
@@ -22,15 +22,20 @@ body {
   top: 0px;
 }
 
+#button-area {
+  position: absolute;
+  top: 50px;
+  left: 10px;
+}
+
 #script-textarea {
   width: 100%;
-  height: 498px;
-  top: 50px;
+  height: 448px;
+  top: 100px;
   position: absolute;
   left: 0;
   font-size: 17px;
   border: lightgray;
-  border-style: solid;
 }
 
 #footer {
@@ -47,6 +52,7 @@ body {
 }
 
 h1 {
+  left: 10px;
   padding: 0;
   margin: 0;
   position: absolute;
@@ -88,7 +94,7 @@ h1 {
   text-align: left;
   font-style: italic;
   opacity: 0.8;
-  margin-left: 45px;
+  margin-left: 20px;
   margin-top: 10px;
   color: rgb(56, 56, 56);
 }
